# DicomViewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: UI结构草图.md  功能清单和优先级.md  核心架构设计.md  项目范围说明.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/common/: Util.cpp  Util.h
src/core/model/dicom/: DicomSeries.h  DicomSliceInfo.h
src/core/model/volume/: SliceOrientation.h  VolumeData.h
src/core/worker/: SliceImageBuilder.cpp  SliceImageBuilder.h
src/core/worker/dicom/: DicomSeriesScanner.cpp  DicomSeriesScanner.h  DicomTagReader.cpp  DicomTagReader.h
src/core/worker/volume/: VolumeBuilder.cpp  VolumeBuilder.h
src/services/controller/: ImportController.cpp  ImportController.h
src/services/model/: ImportResult.h
src/services/state/: ViewerSession.cpp  ViewerSession.h
src/theme/: style.qss
src/ui/dialogs/: SeriesSelectionDialog.cpp  SeriesSelectionDialog.h
src/ui/model/: OverlayInfo.h  VRPreset.h  ViewMode.h
src/ui/pages/: MPRPage.cpp  MPRPage.h  StackPage.cpp  StackPage.h  VRPage.cpp  VRPage.h
src/ui/thumbnailpanel/: ThumbnailPanel.cpp  ThumbnailPanel.h
src/ui/thumbnailpanel/delegate/: ThumbnailItemDelegate.cpp  ThumbnailItemDelegate.h
src/ui/thumbnailpanel/loader/: ThumbnailLoader.cpp  (+1 more)
src/ui/toolbars/: SliceToolBar.cpp  SliceToolBar.h  SliceToolMode.h  StackToolBar.cpp  StackToolBar.h  StackToolMode.h  ViewModeBar.cpp  ViewModeBar.h
src/ui/widgets/: ImageOverlayWidget.cpp  ImageOverlayWidget.h  SliceViewWidget.cpp  SliceViewWidget.h  TitleBarWidget.cpp  TitleBarWidget.h  WorkSpaceWidget.cpp  WorkSpaceWidget.h
(+3 files in other folders)
